<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_mediateka">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="button_clear">Очистить поиск</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="push_agreement">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="android_developer">"https://practicum.yandex.ru/android-developer/"</string>
    <string name="mail_from_me">"mailto:rinatgordey@yandex.ru"</string>
    <string name="mail_title">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="mail_text">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="link_to_share">"https://practicum.yandex.ru/"</string>
    <string name="share_using">"Поделиться приложением с помощью:"</string>
    <string name="refresh">"Обновить"</string>
    <string name="error_tracks">"Ничего не нашлось"</string>
    <string name="something_went_wrong">"что-то пошло не так"</string>
    <string name="error_to_link">"Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету"</string>
    <string name="you_search">"Вы искали"</string>
    <string name="clear_history">"Очистить историю"</string>
    <string name="enter_search_query">"введите поисковый запрос"</string>
    <string name="time_under_play_button">time</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="you_havent_created_any_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="finish_creating_a_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist_toast">Плейлист</string>
    <string name="Nothing">Ничего</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="are_you_sure_you_want_to_remove_the_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks">В этом плейлисте нет списка треков,\nкоторым можно поделиться</string>
    <string name="Do_you_want_to_delete_a_track">Хотите удалить трек?</string>
    <string name="YES">ДА</string>
    <string name="NO">НЕТ</string>
    <string name="Share">Поделиться</string>
    <string name="Edit_information">Редактировать информацию</string>
    <string name="Delete_playlist">Удалить плейлист</string>
    <string name="Do_you_want_to_delete_a_playlist">Хотите удалить плейлист "%1$s"?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="unknown_duration">неизвестно время</string>
    <string name="Field_name_is_not_filled_in">"Поле Название* не заполнено"</string>

    <plurals name="plurals_1" translatable="false">
        <item quantity="zero">%d = zero</item>
        <item quantity="one">%d = one</item>
        <item quantity="two">%d = two</item>
        <item quantity="few">%d = few</item>
        <item quantity="many">%d = many</item>
        <item quantity="other">%d = other</item>
    </plurals>

    <plurals name="plurals_2" translatable="false">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="plurals_3" translatable="false">
        <item quantity="zero">нет минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>