<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/styleLinearLayout">


    <Button
        android:id="@+id/btBack"
        style="@style/btStyleSettings"
        android:text="@string/button_settings"
        android:textSize="@dimen/text_size"
        app:icon="@drawable/back"/>


    <LinearLayout
        style="@style/styleLinearLayout"
        android:paddingStart="@dimen/left_indentation"
        android:paddingTop="@dimen/up_indentation"
        android:paddingEnd="@dimen/right_indentation"
        android:paddingBottom="@dimen/down_indentation">

        <Switch
            android:id="@+id/themeSwitch"
            style="@style/tvStyleSettings"
            android:layout_marginTop="28dp"
            android:text="@string/dark_theme"/>

        <TextView
            android:id="@+id/tvShareSettings"
            style="@style/tvStyleSettings"
            android:drawableEnd="@drawable/share"
            android:text="@string/share_app"></TextView>

        <TextView
            android:id="@+id/tvWriteToSupport"
            style="@style/tvStyleSettings"
            android:drawableEnd="@drawable/write_to_support"
            android:text="@string/write_to_support"></TextView>

        <TextView
            android:id="@+id/tvAgreement"
            style="@style/tvStyleSettings"
            android:drawableEnd="@drawable/agreement"
            android:text="@string/agreement"></TextView>

    </LinearLayout>

</LinearLayout>