<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="@color/backgroundMain"
    tools:context=".search.ui.activity.SearchActivity">

    <LinearLayout
        android:layout_width="@dimen/size352dp"
        android:layout_height="@dimen/size48dp"
        android:layout_marginLeft="@dimen/size4dp"
        android:layout_marginTop="@dimen/size4dp"
        android:layout_marginBottom="@dimen/size4dp"
        style="@style/panel_header">

        <ImageButton
            android:id="@+id/btBackSearch"
            android:layout_width="@dimen/size48dp"
            android:layout_height="@dimen/size48dp"
            style="@style/ic_back" />

        <TextView
            android:layout_width="@dimen/size208dp"
            android:layout_height="@dimen/size48dp"
            style="@style/tv_panel_header"
            android:text="@string/button_search" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size52dp"
        style="@style/frameLayout_for_search_string">

        <EditText
            android:id="@+id/edSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size36dp"
            android:layout_marginBottom="@dimen/size18dp"
            style="@style/edit_text_search"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/btClear"
            style="@style/im_bt_clear_search"
            android:layout_width="@dimen/size40dp"
            android:layout_height="@dimen/size36dp"
            android:layout_gravity="end|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_clear"
            android:src="@drawable/bt_clear_search"
            android:visibility="gone" />

    </FrameLayout>

    <ProgressBar
    android:id="@+id/progressBarr"
    android:layout_width="@dimen/size44dp"
    android:layout_height="@dimen/size44dp"
    android:layout_gravity="center"
    android:indeterminateTint="@color/backgroundMain"
    android:layout_marginTop="@dimen/size144dp"
    android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/placeholderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size102dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/ivPlaceholderNoInternet"
            style="@style/ivPlaceholder"
            android:layout_width="@dimen/size120dp"
            android:layout_height="@dimen/size120dp"
            app:srcCompat="@drawable/ic_error_to_link"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/ivPlaceholderNothingFound"
            style="@style/ivPlaceholder"
            android:layout_width="@dimen/size120dp"
            android:layout_height="@dimen/size120dp"
            app:srcCompat="@drawable/ic_error_found_track"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tvPlaceholderNoInternet"
            style="@style/tvPlaceHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size16dp"
            android:text="@string/error_to_link" />

        <TextView
            android:id="@+id/tvPlaceholderNothingFound"
            style="@style/tvPlaceHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size16dp"
            android:text="@string/error_tracks" />

        <Button

            android:id="@+id/btRefresh"
            style="@style/btRefresh"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size36dp"
            android:layout_marginTop="@dimen/size24dp"
            android:text="@string/refresh" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size16dp"
        android:layout_weight="3"
        android:orientation="vertical"
        tools:listitem="@layout/track_list_item"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/historySearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size24dp"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvYouSearch"
                style="@style/tvYouSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size52dp"
                android:text="@string/you_search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrackHistory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size0dp"
                android:layout_marginTop="@dimen/size8dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/track_list_item" />

            <Button
                android:id="@+id/btClearHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btClearHistory"
                android:layout_marginTop="@dimen/size24dp"
                android:text="@string/clear_history"
                android:visibility="visible" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>