<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_basic">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/size_304dp"
        android:layout_height="@dimen/min_height"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/padding_24dp"
        android:layout_marginStart="@dimen/padding_4dp"
        android:layout_marginTop="@dimen/padding_4dp"
        android:paddingStart="@dimen/padding_12dp"
        android:text="@string/playlist_maker"
        android:textColor="@color/title"
        android:textSize="@dimen/text_size">

    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/left_indentation"
        android:paddingEnd="@dimen/right_indentation"
        android:paddingTop="@dimen/up_indentation"
        android:paddingBottom="@dimen/down_indentation">


        <Button
            android:id="@+id/btSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:backgroundTint="@color/backgroundTint_button"
            android:text="@string/button_search"
            android:textAllCaps="false"
            android:textColor="@color/text_button"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/icon_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_indentation"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/icon">

        </Button>

        <Button
            android:id="@+id/btMediaLibrary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:backgroundTint="@color/backgroundTint_button"
            android:text="@string/button_mediateka"
            android:textAllCaps="false"
            android:textColor="@color/text_button"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/icon_media_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_indentation"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/icon">

        </Button>

        <Button
            android:id="@+id/btSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:backgroundTint="@color/backgroundTint_button"
            android:text="@string/button_settings"
            android:textAllCaps="false"
            android:textColor="@color/text_button"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/icon_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_indentation"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/icon">

        </Button>

    </LinearLayout>

</LinearLayout>

